# orchestra

./: .claudeignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  DCO  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .example.env  CLAUDE.md  Dockerfile  Makefile  main.py  mkdocs.yml  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 00000000000001_change_id_to_uuid.py  00000000000003_add_tokens_table.py  00000000000004_add_agents_table.py  00000000000004_add_settings_table.py  00000000000005_add_agents_table.py  00000000000005_add_settings_table.py  00000000000006_add_agent_revisions_table.py  00000000000006_alter_user_threads.py  00000000000007_update_user_threads_for_agents.py  0000_init.py  0001_change_id_to_uuid.py  0002_add_user_threads.py  0003_add_tokens_table.py  0004_add_settings_table.py  0005_add_user_id_to_settings.py  0006_add_agents_table.py  0007_add_revisions_table.py  0008_rename_user_threads.py  0009_add_servers_table.py  0010_add_tools_table.py  0011_add_updated_at_to_threads.py
backend/scripts/: changelog.sh  dev.sh  key_gen.py
backend/seeds/: setting_seeder.py  user_seeder.py
backend/src/celery/: __init__.py  config.py  tasks.py
backend/src/constants/: __init__.py  description.py  llm.py  mock.py
backend/src/controllers/: agent.py  agent_controller.py  llm.py
backend/src/entities/: __init__.py  a2a.py  auth.py
backend/src/flows/: __init__.py  (+2 more)
backend/tests/: __init__.py
(+505 files in other folders)
