[project]
name = "orchestra-api"
version = "4.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authlib>=1.6.3",
    "bs4>=0.0.2",
    "cryptography>=45.0.7",
    "deepagents>=0.0.5",
    "fastapi>=0.116.1",
    "langchain-anthropic>=0.3.19",
    "langchain-arcade>=1.3.1",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.10",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-xai>=0.2.5",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.23",
    "loguru>=0.7.3",
    "markitdown>=0.1.3",
    "minio>=7.2.16",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "nest-asyncio>=1.6.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic[email]>=2.11.7",
    "pypdf>=6.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "rapidocr-onnxruntime>=1.4.4",
    "sqlalchemy>=2.0.43",
    "ujson>=5.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "faker>=37.6.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*"
]

